2008-05-28  Martyn Russell  <martyn@imendio.com>

	* data/Makefile.am:
	* data/tracker-indexer.service.in:
	* data/tracker.service.in: Added a service for the indexer to
	start when we try to communicate with it. This is an initial step,
	there launching the binary will not associate itself with the DBus
	name in the session just yet.

2008-05-28  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-apps.c:
	* src/trackerd/tracker-apps.h:
	* src/trackerd/tracker-db.h:
	* src/trackerd/tracker-process-files.c: Removed the
	src/trackerd/tracker-apps.[ch] files because there is a module to
	do that now in the src/tracker-indexer code. The process-files
	module now won't try to index applications, but the process-files
	module is obsolete now anyway. All commented out code is
	marked with the comment FIXME-indexer-split.

2008-05-28  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/main.c: Renamed to tracker-main.c

2008-05-28  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/tracker-metadata.[ch]:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db.h:
	* src/trackerd/tracker-dbus-files.c: Moved the
	tracker-metadata.[ch] to the tracker-indexer directory, this also
	is a transitional state for some of this code. Some of the code
	from tracker-db.c has been commented out with #if 0 since it is
	being moved to the indexer at some point. All of this code is
	marked with the comment FIXME-indexer-split.

2008-05-28  Martyn Russell  <martyn@imendio.com>

	* configure.ac: Changed the IOPRIO_SUPPORT to HAVE_IOPRIO since
	thats more consistent with naming conventions. 
	
	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/tracker-indexer.c:
	* src/tracker-indexer/tracker-ioprio.[ch]:
	* src/trackerd/Makefile.am: Moved the tracker-ioprio.[ch] to the